更改日志

2012-02-25
  修正少许注释. 版本号更为 2.0.13

2011-12-02 (revision 17:18)
  用时间平均平滑掉 dt 带来的 spike 时刻电压的离散性. 仅在使用RC滤波时起作用(--RC-filter).

2011-11-23 (svn At revision 16)
  修正BUG:  检查文件写入冲突的部分可能会造成文件内容损坏.
  更正了一些注释.
  减少一些唠叨模式的输出文字.
  版本号增0.0.1

2011-10-23 ~ 2011-11-02
  进行了完整的命令行解析测试
  修正BUG:  -dt 参数修改无效
           --save-interval  不能设成与 -dt 相等
           文件输出前检查是否可用
  更改:  放电时刻文件 ras.txt 的神经元编号改为从 1 开始.
  更改行为: --pr-mul, --ps-mul, --psi-mul, 使用 a@b 之后的数默认是 c@(b+1)
  添加功能: 自定义 RC 低通滤波的系数: --RC-filter ci co
  添加功能(别名): -stv VALUE (同--save-interval VALUE)
  添加命令行参数 "-vv", 用以输出调试信息.

2011-10-03
发现 2011-09-06 的修改的 Bug: GUI 时参数的即时改变无效.
tempneu2 也改成一次生成的了.

2011-09-07
  解决 firing rate 超过 500次/s 的 Bug.
现在只剩下 spike_list 和 tempneu2 是动态生成的了.

2011-09-06
增加功能:
  可以用微秒极的系统时间作为随机种子(--seed-on), 并且这成为默认选项. (--verbose 时会显示其值)
  手动设置随机种子时, 允许用 0~2^31-1 的整数 或 0~1 之间的浮点数.
  可以通过文件读取每个神经的poisson输入率(相对值).
  可以从命令行直接读取相对poisson输入率和输入相度, 并且允许不完整指定. (--pr-mul, --ps-mul, --psi-mul)
优化:
  tempneu 变量预分配内存.

2011-09-05
对所有动态内存分配失败进行检测.
Xstream 系列 C++ 头文件限制在 datainput.cpp 和 myopengl.cpp 中使用.

2011-09-04
增加功能:
  命令行设置随机数种子.
  可以通过文件读取每个神经的poisson输入强度(相对值)(命令行参数给文件路径).

2011-08-10
修正保存数据的一个 bug: 现在可随意设定保存数据间隔.
增加 RC 滤波选项.

2011-07-11
修正命令行参数解析的一个 bug, 但未完全修正, 请完全按照指定格式使用.
添加对一些编译器的识别宏.
对程序在不同平台的运行效率进行了一个较完整的测试.

2011-05-29
基本把 poisson_input.cpp 的每个细节都弄清楚了.
去除了一些没用到的变量(数组).
把存放 Poisson input 的数组改成程序开头分配.
strobeupdate 改成只更新要用到的部分
一些代码改成更适于打印的形式
速度有约 10% 的提升

2011-05-20
添加参数 --save-spike-interval FILE

2011-05-11
添加参数 --save-spike FILE, --bin-save, --quiet

2011-05-06
总测试:
内存泄漏.
计算正确性.
异常的性能下降.

特例测试(时长=10000, 完全图)
编号  神经元数   输入强度  输入频率
1    1 + 0     弱        弱
2    1 + 0     弱        高
3    1 + 0     强        低
4    1 + 0     强        高

5    2 + 0     弱        弱
6    2 + 0     弱        高
7    2 + 0     强        低
8    2 + 0     强        高

9    20 + 0    中        中

1000 + 0  中        中    连接强度 中高


2011-05-05
在添加了一些命令行功能, 接口基本完整了. 取消原来想设的二进制格式输出.
把打开/关闭文件操作放在了开头/末尾, 效率问题大大改善.

2011-05-04