@@ -1,5 +1,14 @@
 更改日志
 
+2012-05-22
+  在非静默模式下(不带 -q 或 --quiet 命令行参数)的情况下使用全连矩阵(-mat -)时给出警告.
+  输出文件的放电频率统计(--save-spike-interval FILE)改为使用15位精度输出.
+  插值失败的检测改为实时进行----平均每秒不超过一次警告, 否则视为错误自动退出.
+     (这是exponential I&F 计算时经常会出的问题)
+
+2012-04-17
+  以宏的方式添加了对 exponential I&F 模型的支持.
+
 2012-02-25
   修正少许注释. 版本号更为 2.0.13
 
